--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             <p class="typewriter">Rediscovering Legacy</p>
         </article>
         <section class="about mt-5" id="about">
-            <h1 class="yellow text-uppercase">About</h1>
+            <h1 class="yellow">About</h1>
             <p class="text-justify text-light pb-5 pt-5 about-cont">
                 SAINTGITS College of Engineering organizes ‘Samyuktha 6.0’, a national level techno cultural fest, on
                 March 24th. ‘Samyuktha’ has been successfully organized for the past five years and serves as an ideal
