--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,8 @@
         <div class="wrapper">
             <h1 class="yellow pb-3">Events</h1>
             <div class="text-danger">
-                <p>Please Note :</p>
-                <ul>
+                <p class="fw-bold">Please Note :</p>
+                <ul class="fw-bold">
                     <li>You can register for these events directly from website.</li>
                     <li>Payments are not made through website.</li>
                     <li>Payments should be done at the venue</li>
@@ -277,7 +277,7 @@
             </div>
         </div>
     </section>
-    <section class="contact pt-5 pb-5">
+    <section class="contact pt-5 pb-5" id="contacts">
         <div class="wrapper">
             <h1 class="pb-5 yellow">Contact</h1>
             <div class="row">
